# skills-store-operational-banner-design

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: skills-lock.json
.opencode/: image-saver.config.json  instructions.md
.opencode/commands/: open.md
.opencode/plugins/: file-watcher.js  image-saver.js
.opencode/tools/: open.js
docs/: AI协作规范.md  progress.md  ranking.md  sharing-guide.md  交接文档.md  图片处理说明.md  快速开始.md  战报规范.md  新增后端指南.md  流程与规则.md  说明.txt
lib/: opencode_image_input.py
scripts/: _analyze_corner.py  _backends.py  _check_push_edges.py  _check_source_edges.py  _debug_var.py  _env.py  _expand_to_target.py  _packy.py  _paths.py  _run_variation.py  _test_2048x512.py  _test_a4_gen_bg.py  _test_a4_v2.py  _test_a5_edge_fill.py  _test_a6b_smooth.py  _test_size.py  _test_t2i.py  agent_skill.py  combine_joint_logo.py  compose_floating_window.py  compose_nav_icon.py  compose_title_art_preview.py  compose_wide_from_step1.py  compute_icon_crop.py  compute_icon_crop_no_numpy.py  convert_logo_svg.py  create_placeholder_logos.py  ensure_python.py  extract_missing_layers.py  extract_subject_birefnet.py  fallback_title_art_pil.py  generate_assets.py  generate_bubble.py  generate_bubble_icon.py  generate_bubble_icon_lovart.py  generate_calendar_icon.py  generate_course_icon.py  generate_dialog_banner.py  generate_store_popup.py  grab_db_image.py  (+45 more)
scripts/assets/: README_联合logo.txt
scripts/battle_report/: __init__.py  baoyu_image_gen.py  color_extract.py  compose_battle_report.py  env_setup.py  extract_theme_from_kv.py  (+8 more)
(+120 files in other folders)
