[project]
name = "skills-store-operational-banner-design"
version = "0.1.0"
description = "Banner 背景生成与多尺寸叠字工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.18.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# 商店专题长图 3320×500 顶条 BiRefNet 抠图（prepare_background A5b）
# 安装：pip install -e ".[birefnet]" 或运行 scripts/install_birefnet_deps.bat（Windows CPU 版 PyTorch）
birefnet = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.38.0,<5.0.0",
    "huggingface_hub>=0.20.0",
    "regex>=2024.5.0",
    "kornia>=0.7.0",
    "kornia-rs>=0.1.9",
]
# PC 排行榜图片生成（HTML → Playwright 截图）
ranking = [
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
    "pycryptodome",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 根目录有 input/、output/ 等目录，勿被 setuptools 当成 Python 包
[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
